--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -2,7 +2,7 @@
   "name": "browser",
   "version": "1.0.0",
   "scripts": {
-    "build": "parcel build index.html --dist-dir ../dist --no-source-maps --public-url ./ --no-optimize"
+    "build": "parcel build index.html --dist-dir ../../dist --no-source-maps --public-url ./ --no-optimize"
   },
   "keywords": [],
   "author": "",
