--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "packages/browser"
   ],
   "scripts": {
-    "build": "npm run build --workspaces --if-present",
-    "start": "npm start --workspaces --if-present"
+    "build": "npm run build --workspaces",
+    "start": "npm start --workspace=electron"
   }
 }
