--- a/browser/package.json
+++ b/browser/package.json
@@ -2,7 +2,7 @@
   "name": "browser",
   "version": "1.0.0",
   "scripts": {
-    "build": "parcel build index.html --dist-dir ../../dist --no-source-maps --public-url ./ --no-optimize"
+    "build": "parcel build index.html --dist-dir ../dist --no-source-maps --public-url ./ --no-optimize"
   },
   "keywords": [],
   "author": "",
@@ -11,6 +11,6 @@
   "devDependencies": {
     "@parcel/transformer-typescript-tsc": "^2.12.0",
     "parcel": "^2.12.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.2"
   }
 }
