--- a/electron/package.json
+++ b/electron/package.json
@@ -1,17 +1,14 @@
 {
   "name": "electron",
   "version": "1.0.0",
-  "main": "../../dist/main.js",
   "scripts": {
-    "build": "tsc",
-    "start": "electron ."
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "typescript": "^5.5.4",
-    "electron": "^32.0.1"
+    "typescript": "^5.6.2"
   }
 }
